apps/media/jellyfin/ingress_route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  labels:
    revision: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.samsonnguyen.ca`)
      kind: Rule
      services:
        - name: "jellyfin"
          port: "http"
          namespace: "media"
      middlewares:
      - name: traefik-redirect-scheme@kubernetescrd
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
